[package]
name = "sched"
version = "0.1.0"
authors = ["Alex Norman <alex@x37v.info>"]
edition = "2018"

[features]
std = []
euclidean = []
with_serde = ["serde"]
with_alloc = []
float32 = []
default = ["std", "with_alloc", "euclidean", "with_serde"]

[dependencies]
serde = { version = "1.0.124", features = ["derive"], optional = true }
num-traits = { version = "0.2.14", features = ["libm"], default-features = false }
num-iter = { version = "0.1.42", default-features = false }
spin = { version = "0.9.0", default-features = false, features = ["spin_mutex"] }

[dev-dependencies]
lazy_static = "1.4.0"
